 - Added usb_hid_mouse sample for 16f1455
 - Added new blink-a-led sample files for new devices from MPLABX v4.15
 - Added virtual_wire_transmitter sample for 16f1825
 - Added virtual_wire_receiver sample for 16f1825
 - Added new blink-a-led sample files for new devices from MPLABX v4.20
 - General update of all blink samples indicating new JAL compiler version
 
tools:
 - Updated Python script for use with MPLABX v4.15
 - Updated Python script for use with MPLABX v4.20
 




jallib-1.3.0
------------

Changes since 1.2.0

device files:
   - Replaced existing device files and added more about new device files
     derived from MPLABX v4.05

externals:
 - Added accelerometer_gyroscope_bmi160.jal - accelerometer & gyroscope library.
 - Added seven_segment_multiplexer.jal - multiplexing for 7 segment displays. 
- Added transceiver CC1101 library

filesystem:
 -

jal:
 -

networking:
 -

peripherals:
 - Added Added memory_pointer0 lib
 - Added spi_slave_hw library
 - Added stopwatch2 library
 - Added timer libraries for more general usage of timers.
 - Added timer_frequency to calculate timer frequencies.

protocols:
 -

samples:
 - Added about 100 new blink-a-led samples for new device files
 - sd_card sample for 18f26j50
 - fat32 sd_card sample for 18f26j50
 - sd_card sample for 18f67j60
 - fat32 sd_card sample for 18f67j60
 - 18f4550_timer3 - a simple example for timer3
 - accelerometer & gyroscope bmi160 sample for 18f4620
 - 18f4620_freq_counter_osc_in - a frequency counter using OSC_IN as input.
   Can measure up to 40mhz.
 - 18f4620_freq_counter_timer_in - a frequency counter using timer_in.
 - 18f4620_motor_hbridge - hbridge motor sample.
 - seven_segment_multiplexer sample for 18f4620 to save pins when using more then one
   seven segment display.
 - spi_slave_hw sample - sample to receive spi data.
 - spi_to_serial sample - uses spi_slave_hw library to receive data then sends
   data back out via serial.
 - 18f67j50_spi.jal - send data via spi