@@ -1830,6 +1830,7 @@
 			  Updated the compiler version to 2.5 for pic2jal.py and blink-a-led.py.
  2018/10/29 - MPLABX v5.05. 4 corrected devices uploaded.
  2018/11/03 - Small correction in PPS part due to RxyPPS having a value of 0x80 which equals the pattern check.
+ 2018/12/02 - MPLABX v5.10. 3 new blink samples uploaded.
 ----
 
 To do: - Add pin_VPx and pin_VPx_direction declarations (18f97j94 family)
