@@ -47,10 +47,14 @@ samples:
  - Added virtual_wire_receiver sample for 16f1825
  - Added new blink-a-led sample files for new devices from MPLABX v4.20
  - General update of all blink samples indicating new JAL compiler version
+ - Added new blink samples for new devices from MPLABX 5.10
  
 tools:
  - Updated Python script for use with MPLABX v4.15
  - Updated Python script for use with MPLABX v4.20
+ - Updated Python script for use with MPLABX v5.0
+ - Updated Python script for use with MPLABX v5.05
+ - Updated Python script for use with MPLABX v5.10
  
 
 
